package org.example.message;

public enum MessageType
{
    STRING,
    DISCONNECT,
    MOVE,
    COMMAND,
    GAMESTATE,
    USERNAME,
    USERLIST,
    RULES_TYPE,
    BOARD_TYPE, END_TURN, PROMPT_MOVE,
}